--- a/.github/workflows/release-multiarch.yaml
+++ b/.github/workflows/release-multiarch.yaml
@@ -66,6 +66,9 @@ jobs:
 
 
   Create Release:
+    steps:
+      -
+        name: "Create release"
         run: |
           git config --global user.name "Prabhav Thali"
           git config --global user.email "Prabhav.Thali1@ibm.com"
