[release] Bump to 7.29.1 in 7.29.x
Signed-off-by: Prabhav Thali <Prabhav.Thali1@ibm.com>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "che-dashboard",
-  "version": "7.29.1-SNAPSHOT",
+  "version": "7.29.1",
   "description": "Dashboard for Eclipse CHE",
   "private": true,
   "repository": {
