--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "che-dashboard",
-  "version": "7.29.1",
+  "version": "7.29.2-SNAPSHOT",
   "description": "Dashboard for Eclipse CHE",
   "private": true,
   "repository": {
