[release] Bump to 7.31.1-SNAPSHOT in 7.31.x
Signed-off-by: Prabhav Thali <Prabhav.Thali1@ibm.com>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "che-dashboard",
-  "version": "7.31.0",
+  "version": "7.31.1-SNAPSHOT",
   "description": "Dashboard for Eclipse CHE",
   "private": true,
   "repository": {
