--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -111,7 +111,7 @@ jobs:
         run: |
           MANIFEST_ARCHS=$(skopeo inspect docker://${{ env.IMAGE }}:${{ github.event.inputs.version }} --raw | jq -r '.manifests[].platform.architecture' | xargs | tr " " "," | sed -r -e "s#\$##")
           echo $MANIFEST_ARCHS
-          if [[ "amd64,arm64,ppc64le,s390x" == $MANIFEST_ARCHS ]]; then
+          if [[ "amd64,arm64,ppc64le,s390x" != $MANIFEST_ARCHS ]]; then
             echo "[!] The job 'create-manifest' failed for some architectures."
             exit 1;
           fi
