--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,6 @@ on:
 
 env:
   IMAGE: quay.io/prabhav/che-dashboard
-  CACHE_IMAGE_FULL: docker.io/prabhavthali/che-dashboard:cache
 
 jobs:
 
@@ -44,18 +43,9 @@ jobs:
           username: ${{ secrets.QUAY_USERNAME }}
           password: ${{ secrets.QUAY_PASSWORD }}
       -
-        name: "Docker docker.io Login"
-        uses: docker/login-action@v1
-        with:
-          registry: docker.io
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      -
         name: "Build and push ${{ matrix.arch }}"
         uses: docker/build-push-action@v2
         with:
-          cache-from: type=registry,ref=${{ env.CACHE_IMAGE_FULL }}
-          cache-to: type=registry,ref=${{ env.CACHE_IMAGE_FULL }},mode=max
           context: .
           file: ./apache.Dockerfile
           platforms: linux/${{ matrix.arch }}
@@ -82,39 +72,32 @@ jobs:
       -
         name: "Create and push manifest"
         run: |
-          AMEND=""
           AMD64_VERSION="${{ needs['build-images'].outputs.amd64 }}"
-          if [ -n "$AMD64_VERSION" ]; then
-            AMEND+=" --amend ${{ env.IMAGE }}:$AMD64_VERSION";
-          fi
           ARM64_VERSION="${{ needs['build-images'].outputs.arm64 }}"
-          if [ -n "$ARM64_VERSION" ]; then
-            AMEND+=" --amend ${{ env.IMAGE }}:$ARM64_VERSION";
-          fi
           PPC64LE_VERSION="${{ needs['build-images'].outputs.ppc64le }}"
-          if [ -n "$PPC64LE_VERSION" ]; then
-            AMEND+=" --amend ${{ env.IMAGE }}:$PPC64LE_VERSION";
-          fi
           S390X_VERSION="${{ needs['build-images'].outputs.s390x }}"
-          if [ -n "$S390X_VERSION" ]; then
-            AMEND+=" --amend ${{ env.IMAGE }}:$S390X_VERSION";
-          fi
-          if [ -z "$AMEND" ]; then
-            echo "[!] The job 'build-images' didn't provide any outputs. Can't create the manifest list."
+
+          if [ -z "$AMD64_VERSION" || \
+               -z "$ARM64_VERSION" || \
+               -z "$PPC64LE_VERSION" || \
+               "$S390X_VERSION"]; then
+            echo "[!] The job 'build-images' fails on some of architectures. Can't create complete "[!] The job 'build-images' fails on some of architectures. Can't create complete manifest.";
             exit 1;
           fi
+
+          AMEND=""
+          AMEND+=" --amend ${{ env.IMAGE }}:$AMD64_VERSION";
+          AMEND+=" --amend ${{ env.IMAGE }}:$ARM64_VERSION";
+          AMEND+=" --amend ${{ env.IMAGE }}:$PPC64LE_VERSION";
+          AMEND+=" --amend ${{ env.IMAGE }}:$S390X_VERSION";
+
           docker manifest create ${{ env.IMAGE }}:${{ github.event.inputs.version }} $AMEND
           docker manifest push ${{ env.IMAGE }}:${{ github.event.inputs.version }}
       -
         id: result
         name: "Manifest result"
-        run: |
-          MANIFEST_ARCHS=$(skopeo inspect docker://${{ env.IMAGE }}:${{ github.event.inputs.version }} --raw | jq -r '.manifests[].platform.architecture' | xargs | tr " " "," | sed -r -e "s#\$##")
-          echo $MANIFEST_ARCHS
-          if [[ "amd64,arm64,ppc64le,s390x" != $MANIFEST_ARCHS ]]; then
-            echo "[!] The job 'create-manifest' failed for some architectures."
-            exit 1;
-          fi
+        if: ${{ success() }}
+        run: echo "Manifest was created and pushed successfully"
 
   tag-release:
     if: always()
