--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        arch: [amd64,arm64,ppc64le,s390x]
+        arch: [amd64,arm64,s390x]
     outputs:
       amd64: ${{ steps.result.outputs.amd64 }}
       arm64: ${{ steps.result.outputs.arm64 }}
@@ -80,7 +80,7 @@ jobs:
           if [ -z "$AMD64_VERSION" || \
                -z "$ARM64_VERSION" || \
                -z "$PPC64LE_VERSION" || \
-               "$S390X_VERSION"]; then
+               -z "$S390X_VERSION"]; then
             echo "[!] The job 'build-images' fails on some of architectures. Can't create complete "[!] The job 'build-images' fails on some of architectures. Can't create complete manifest.";
             exit 1;
           fi
