--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,9 +54,7 @@ jobs:
         id: result
         name: "Build result outputs version"
         if: ${{ success() }}
-        run: |
-          echo "::set-output name=${{ matrix.arch }}::${{ github.event.inputs.version }}-${{ matrix.arch }}";
-          exit 1;
+        run: echo "::set-output name=${{ matrix.arch }}::${{ github.event.inputs.version }}-${{ matrix.arch }}"
 
   create-manifest:
     needs: build-images
